@@ -13,7 +13,7 @@ SQLObject 0.9.2
 * Fixed a bug in Versioning - do not copy "alternateID" and "unique"
   attributes from the versioned table.
 
-* A number of changes ported from `SQLObject 0.7.9`_.
+* A number of changes ported from `SQLObject 0.7.9`_ and `SQLObject 0.8.6`_.
 
 SQLObject 0.9.1
 ===============
@@ -86,6 +86,10 @@ Bug Fixes
 
 SQLObject 0.8.6
 ===============
+
+* Removed SelectResults.__nonzero__, which was a design mistake. Raising an
+  exception in __nonzero__() is inconsistent with other iterators
+  (bool(iter([])) => True).
 
 * A number of changes ported from `SQLObject 0.7.9`_.
 
